# pop_lab

./: .gitignore  TODO  cp_to_bioinf_web.sh  pyproject.toml  requirements.txt
doc/: how_to_create_jupyterlite_site.txt  how_to_shiny.txt  ipywidgets.txt  shiny.txt  similar_project.txt
pop_lab_site/: conf.py  index.rst
pop_lab_site/practices/coalescence/: selective_sweep.md
pop_lab_site/practices/fwd/: balancing_selection.md  balancing_ximo  drift.md  selection.md  selection_ximo.md
src/: build_and_serve_pop_lab_site.py  create_web_site.py
src/apps/fwd/balancing_selection_app/: app.py  (+3 more)
src/apps/request_test_app/: app.py
src/bottleneck_app/: app.py  requirements.txt  shiny_module_sim_demography.py  shiny_modules_general_msprime.py
src/drifting_pops_app/: shiny_module_sim_demography.py
src/example_msprime_sim_app/: shiny_module_sim_demography.py
src/one_locus_app/: app.py
src/pop_lab/: __init__.py  msprime_sim_utils.py  msprime_utils.py  one_locus_app.py  one_locus_two_alleles_app.py  one_locus_two_alleles_simulation.ipynb  one_locus_two_alleles_simulation2.ipynb  one_locus_two_alleles_simulator.py  plotters.py  setup.py  shiny_modules_fwd_in_time.py  shiny_modules_general_msprime.py  style.py  widgets.py
src/pop_lab/testapp2/: app.py
src/simple_drift/: app.py
src/simple_drift_app/: app.py  fwd_in_time_app_specific_code.py  one_locus_two_alleles_simulator.py  shiny_modules_fwd_in_time.py
src/simple_selection_app/: fwd_in_time_app_specific_code.py
tests/: test_msprime_sim_utils.py  test_msprime_simulation.py  test_one_locus_two_alleles.py
(+24 files in other folders)
