[project]
name = "pop-lab"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas>=2.2.2",
    "numpy>=2.1.1",
    "matplotlib>=3.9.2",
    "pynei",
    "shinylive>=0.6.0",
    "msprime>=1.3.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pytest>=8.3.3",
    "ruff>=0.6.5",
]

[tool.uv.sources]
pynei = { path = "../pynei/", editable = true }
